2004/01/22 15:28 (-0500) muppetman

	A NEWS
	M MANIFEST
	add a NEWS file that summarizes the ChangeLog in digestible terms.

	* t/GtkStyle.t: versions of gtk+ prior to 2.2.0 handled only
	'south-east', which isn't so bad, except that they actually called
	g_assert_not_reached() in the branch of code that you reach by
	passing other values.  so, eh, never pass anything but south-east
	to old gtk+.

	* t/GtkTextChildAnchor.t: letting an anchor die without having
	inserted it into a buffer causes very bad things to happen.
	dispose of it nicely.

2004/01/22 15:28 (-0500) muppetman

	* t/Gdk.t: don't forget the skip count.

2004/01/22 02:15 (-0500) muppetman

	* xs/GtkFileChooser.xs, xs/GtkIconFactory.xs, xs/GtkTreeView.xs,
	xs/PangoFont.xs: plugging more memory leaks

	* xs/GtkRc.xs: invalid free bug was triggered by letting g_free() try
	to free perl's garbage collected memory.  GtkRc wants to g_free() the
	bg_pixmap_name and name in its destructor, so we must g_strdup them.
	don't forget to free the old values.

2004/01/22 00:46 (-0500) muppetman

	* xs/GtkAccelGroup.xs, xs/GtkTextChildAnchor.xs, xs/GtkTreeModel.xs:
	stop memory leaks

2004/01/21 17:16 (-0500) muppetman

	* xs/Gdk.xs: before 2.2.0, gdk_get_display() returned a static string.
	don't free it if we're on old gtk+.

2004/01/21 00:32 (-0500) muppetman

	* xs/GdkColor.xs: use initializers to keep valgrind happy.

	* t/GdkColor.t: if we're testing that pixel is nonzero after
	alloc_colors, test that it's zero before

	* xs/GdkTypes.xs: always initialize the geometry hints

	* xs/GdkWindow.xs: always initialize the attribute mask, regardless
	of code path

2004/01/20 21:42 (-0500) muppetman

	* xs/GtkSelection.xs: free the value returned from 
	gtk_selection_data_get_text().  also make sure Perl treats is as utf8.

2004/01/20 21:00 (-0500) muppetman

	* gtk2perl.h, xs/GtkClipboard.xs, xs/GtkSelection.xs: use
	gperl_alloc_temp() instead of g_new0() in